<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:clipChildren="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.filterDialog.FilterDialogFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/active_n_filter"
                style="@style/Text.Header24"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_state_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textStyle="bold"
                android:textColor="@color/select_birutua_white"
                android:backgroundTint="@color/select_white_birutua"
                app:strokeColor="@color/biru_tua"
                app:strokeWidth="2dp"
                style="@style/Text.JudulBerita18"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_state_upcone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:textStyle="bold"
                android:textColor="@color/select_birutua_white"
                android:backgroundTint="@color/select_white_birutua"
                app:strokeColor="@color/biru_tua"
                app:strokeWidth="2dp"
                style="@style/Text.JudulBerita18"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_state_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                android:textStyle="bold"
                android:textColor="@color/select_birutua_white"
                android:backgroundTint="@color/select_white_birutua"
                app:strokeColor="@color/biru_tua"
                app:strokeWidth="2dp"
                style="@style/Text.JudulBerita18"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>