<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting.nested_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:elevation="8dp"
            style="@style/Text.Header38_appbar"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="20dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/biru_tua"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:background="@drawable/gradient_btn_detail"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dicoding_event"
                    android:textColor="@color/kuning"
                    android:textSize="28sp"
                    android:textStyle="italic|bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/applications"
                    android:textColor="@color/icon"
                    android:layout_gravity="end"
                    style="@style/Text.Header24"
                    android:textStyle="italic|bold"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dark_mode"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/ungu_neon"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/dark_mode"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                app:thumbTint="@color/white"
                app:trackDecorationTint="@color/ungu_neon"
                app:trackTint="@color/select_abu_ungu"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="2dp"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/merah"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/notification"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                app:thumbTint="@color/white"
                app:trackDecorationTint="@color/ungu_neon"
                app:trackTint="@color/abu_abu_terang"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_privasi"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/kuning"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/privacy"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:tint="@color/abu_abu_terang"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_security"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/blue_link"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/security"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:tint="@color/abu_abu_terang"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_appearance"
                android:scaleType="fitCenter"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/hijau"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/appearance"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:tint="@color/abu_abu_terang"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_language"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/kuning"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/leanguage"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/abu_abu_terang"
                android:text="@string/english"
                android:gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:tint="@color/abu_abu_terang"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:layout_marginTop="28dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ask_q"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/merah"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ask_a_question"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:tint="@color/abu_abu_terang"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_faq"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                app:contentPadding="8dp"
                android:tint="@color/icon"
                android:background="@color/blue_link"
                app:shapeAppearanceOverlay="@style/Circular"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/faq"
                android:layout_weight="1"
                style="@style/Text.Subjudul16"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:tint="@color/abu_abu_terang"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/abu_abu"
            android:text="@string/dicoding_event_v2_54_1_678"
            android:layout_marginVertical="30dp"
            style="@style/Text.Subjudul16"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>