<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/surface"
    app:strokeColor="@color/surface_strok"
    app:cardCornerRadius="22dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_corousel"
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_item_hori"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/abu_abu_terang"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                android:src="@drawable/dbs_blur"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00"
                app:shapeAppearanceOverlay="@style/RadiusBottomRight16" />

            <ImageButton
                android:id="@+id/iv_favorit"
                style="@style/Button.Back"
                android:layout_margin="16dp"
                android:background="@drawable/rip_white_trans_white_dark1"
                android:contentDescription="@string/faforit"
                android:src="@drawable/ic_favorit_not"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.999"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00"
                app:tint="@color/bottom_nav_icon" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white_trans_60"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.00"
                    app:tint="@color/kuning">

                    <TextView
                        android:id="@+id/home.tv_tgl"
                        style="@style/Text.JudulBerita18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_14"
                        android:textColor="@color/biru_tua"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/home.tv_bulan"
                        style="@style/Text.Subjudul16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jun"
                        android:textColor="@color/biru_tua"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_header_item"
                style="@style/Text.Subjudul16"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/sample"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_des1_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_item_hori"
                app:layout_constraintVertical_bias="0.00" />

            <TextView
                android:id="@+id/tv_des1_item"
                style="@style/Text.Metadata12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/sample"
                android:textColor="@color/text_tersiery"
                app:layout_constraintBottom_toTopOf="@id/tv_owner_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_item" />

            <TextView
                android:id="@+id/tv_owner_item"
                style="@style/Text.Metadata12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sample"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_item"
                app:layout_constraintVertical_bias="0.99" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/item_corousel.lottie_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/event_not_available_yet_but_we_re_working_on_something_amazing"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/lottie_empty"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />
        </LinearLayout>
    </FrameLayout>

</com.google.android.material.card.MaterialCardView>